--- a/Quem Somos/quem_somos.html
+++ b/Quem Somos/quem_somos.html
@@ -27,7 +27,7 @@
     </div>
     <div class="area">
         <h2>
-            <font color="#ffffff">Desenvolvedor Júnior</font>
+            <font color="#ffffff">Developer Web</font>
         </h2>
         <div class="endereço">
             <h2>
@@ -43,6 +43,11 @@
                     src="https://img.shields.io/badge/Gmail-D14836?style=for-the-badge&logo=gmail&logoColor=white"></a>
             <a href="wa.me/5585989935100"><img
                     src="https://img.shields.io/badge/WhatsApp-25D366?style=for-the-badge&logo=whatsapp&logoColor=white"></a>
+
+            <a href="https://github.com/rafaeldeje"> <img
+                    src="https://img.shields.io/badge/GitHub-993399?style=for-the-badge&logo=github&logoColor=white">
+
+            </a>
         </h2>
     </div></br>
     <div class="resumo">
